; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c___Read.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_dvd.c___Read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec = type { i32, i64 }

@__dvd_callback = common dso_local global i32 0, align 4
@__dvd_stopnextint = common dso_local global i64 0, align 8
@__dvd_lastcmdwasread = common dso_local global i32 0, align 4
@DVD_READSECTOR = common dso_local global i32 0, align 4
@_diReg = common dso_local global i32* null, align 8
@__dvd_lastlen = common dso_local global i32 0, align 4
@DVD_DI_DMA = common dso_local global i32 0, align 4
@DVD_DI_START = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32, i32)* @__Read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__Read(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.timespec, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  store i32 %11, i32* @__dvd_callback, align 4
  store i64 0, i64* @__dvd_stopnextint, align 8
  store i32 1, i32* @__dvd_lastcmdwasread, align 4
  %12 = load i32, i32* @DVD_READSECTOR, align 4
  %13 = load i32*, i32** @_diReg, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 2
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* %7, align 4
  %16 = ashr i32 %15, 2
  %17 = load i32*, i32** @_diReg, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 3
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* %6, align 4
  %20 = load i32*, i32** @_diReg, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 4
  store i32 %19, i32* %21, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = ptrtoint i8* %22 to i32
  %24 = load i32*, i32** @_diReg, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 5
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* %6, align 4
  %27 = load i32*, i32** @_diReg, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 6
  store i32 %26, i32* %28, align 4
  %29 = load i32, i32* %6, align 4
  store i32 %29, i32* @__dvd_lastlen, align 4
  %30 = load i32, i32* @DVD_DI_DMA, align 4
  %31 = load i32, i32* @DVD_DI_START, align 4
  %32 = or i32 %30, %31
  %33 = load i32*, i32** @_diReg, align 8
  %34 = getelementptr inbounds i32, i32* %33, i64 7
  store i32 %32, i32* %34, align 4
  %35 = load i32*, i32** @_diReg, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 7
  %37 = load i32, i32* %36, align 4
  store i32 %37, i32* %9, align 4
  %38 = load i32, i32* %9, align 4
  %39 = icmp sgt i32 %38, 10485760
  br i1 %39, label %40, label %44

40:                                               ; preds = %4
  %41 = getelementptr inbounds %struct.timespec, %struct.timespec* %10, i32 0, i32 0
  store i32 20, i32* %41, align 8
  %42 = getelementptr inbounds %struct.timespec, %struct.timespec* %10, i32 0, i32 1
  store i64 0, i64* %42, align 8
  %43 = call i32 @__SetupTimeoutAlarm(%struct.timespec* %10)
  br label %48

44:                                               ; preds = %4
  %45 = getelementptr inbounds %struct.timespec, %struct.timespec* %10, i32 0, i32 0
  store i32 10, i32* %45, align 8
  %46 = getelementptr inbounds %struct.timespec, %struct.timespec* %10, i32 0, i32 1
  store i64 0, i64* %46, align 8
  %47 = call i32 @__SetupTimeoutAlarm(%struct.timespec* %10)
  br label %48

48:                                               ; preds = %44, %40
  ret void
}

declare dso_local i32 @__SetupTimeoutAlarm(%struct.timespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
